--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 			<div id="sound-box"></div>
 			<canvas id="overworld"></canvas>
 			<canvas id="animation"></canvas>
+			<div>
+				<img id="speaker-0" class="speaker" src="img/npc/speak-clothe-default.png" style="left: 149px;">
+				<img id="speaker-1" class="speaker" src="img/npc/speak-clothe-default.png" style="left: 405px;">
+			</div>
+			<div class="text-box" id="speak-with-npc"></div>
 		</section>
 
 		<section id="pause-menu" class="menu" style="display: none;">
@@ -24,7 +29,9 @@
 
 		<script src="data/variables.js"></script>
 		<script src="data/classes.js"></script>
-		<script src="data/keyEvents.js"></script>
+		<script src="data/events-rooms.js"></script>
+		<script src="data/events-npcs.js"></script>
+		<script src="data/events-keys.js"></script>
 		<script src="main.js" onload="startGame()"></script>
 	</body>
 </html>
