--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 			</div>
 
 			<div id="player-stats" class="stats-window">
-				<div class="stats-info">
+				<div class="stats-info has-custom-background">
 					<img src="./img/npc/player/speak-clothe-default.png" class="speaker">
 					<div>
 						<p id="player-name"></p>
 						<p id="player-bio"></p>
 					</div>
 				</div>
-				<div class="custom-info"></div>
+				<div class="custom-info has-custom-background"></div>
 			</div>
 
 			<div id="items" style="display: none;">
@@ -79,7 +79,7 @@
 			<div id="npcs" style="display: none;">
 				<div id="npc-list"></div>
 				<div id="npc-stats" class="stats-window">
-					<div class="stats-info">
+					<div class="stats-info has-custom-background">
 						<img src="./img/npc/speak-clothe-default.png" class="speaker">
 						<div>
 							<p id="npc-name"></p>
@@ -87,7 +87,7 @@
 							<!-- <img id="return-button" class="button" src="./img/button-return.png"> -->
 						</div>
 					</div>
-					<div class="custom-info"></div>
+					<div class="custom-info has-custom-background"></div>
 				</div>
 			</div>
 		</section>
