Style: Improve menu appearance
Changed the game's color palette and improved the UI background images.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		<section id="inventory" class="menu">
 			<div id="inventory-ui">
-
+				<img id="return-button" class="button" src="./img/button-return.png" onclick="resumeGame()">
 			</div>
 
 			<div id="player-stats" class="stats-window">
