Feat: Add Items to the game
Items that can be stored in the player's inventory and will be used to complete npcs quests and/or add buffs to the player, if buffs are implemented in the future.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 
 		<script src="js/variables.js"></script>
 
+		<script src="classes/Item.js"></script>
 		<script src="classes/Room.js"></script>
 		<script src="classes/Sprite.js"></script>
 		<script src="classes/Tile.js"></script>
