Feat: Show Npcs information in inventory
NPCs are now displayed in the inventory tab, allowing you to display information about them. This information will change and evolve as the player performs their missions.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<p id="player-bio"></p>
 					</div>
 				</div>
-				<div class="custom-info has-custom-background"></div>
+				<div id="custom-info-player" class="custom-info has-custom-background"></div>
 			</div>
 
 			<div id="items" style="display: none;">
@@ -95,17 +95,10 @@
 			</div>
 
 			<div id="npcs" style="display: none;">
-				<div id="npc-list"></div>
-				<div id="npc-stats" class="stats-window" style="display: none;">
-					<div class="stats-info has-custom-background">
-						<img src="./img/npc/speak-clothe-default.png" class="speaker">
-						<div>
-							<p id="npc-name"></p>
-							<p id="npc-bio"></p>
-						</div>
-					</div>
-					<div class="custom-info has-custom-background"></div>
+				<div class="has-custom-background" style="size: -webkit-fill-avaible;">
+					<div id="npc-list"></div>
 				</div>
+				<div id="npc-stats" class="stats-window" style="display: none;"></div>
 			</div>
 		</section>
 
