Fix: Select button
Buttons used in selection screens now show when they are selected, changing their styles as necessary.

--- a/index.html
+++ b/index.html
@@ -32,17 +32,15 @@
 				</div>
 
 				<div id="action-buttons">
-					<input id="test1" type="radio" name="action-button" class="radio">
-						<label for="test1" class="animation-action">
-							<img src="./img/button-test1.png">
-						</label>
-					</input>
+					<label class="animation-action">
+						<input id="test1" type="radio" name="action-button" class="radio"></input>
+						<img src="./img/button-test1.png">
+					</label>
 
-					<input id="test2" type="radio" name="action-button" class="radio">
-						<label for="test2" class="animation-action">
-							<img src="./img/button-test2.png">
-						</label>
-					</input>
+					<label class="animation-action">
+						<input id="test2" type="radio" name="action-button" class="radio"></input>
+						<img src="./img/button-test2.png">
+					</label>
 				</div>
 
 				<p id="speak-animation"></p>
@@ -51,7 +49,6 @@
 
 		<section id="inventory" class="menu">
 			<div id="inventory-ui">
-				<div>
 					<div class="button" onclick="resumeGame()"><p>RESUME</p></div>
 	
 					<label class="button">
@@ -76,7 +73,6 @@
 					<div class="button" onclick="loadGameFromPause()">
 						<p>LOAD</p>
 					</div>
-				</div>
 			</div>
 
 			<div id="player-stats" class="stats-window" style="display: none;">
