Refactor: Room map
'forest-home' got an update and 'home' got a bathtub, most of the changes are in the paid assets file. Hover effects on dark buttons are now easier to apply.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	</head>
 	<body>
 		<section id="main-menu" class="menu">
-			<div id="start-button" class="button"><p>PLAY</p></div>
-			<div class="button" onclick="loadGame()"><p>LOAD</p></div>
+			<div id="start-button" class="button alt-hover"><p>PLAY</p></div>
+			<div class="button alt-hover" onclick="loadGame()"><p>LOAD</p></div>
 		</section>
 
 		<section id="game">
@@ -104,7 +104,7 @@
 					<div id="npc-list"></div>
 				</div>
 				<div id="npc-stats" class="stats-window" style="display: none;">
-					<div id="npc-stats-back-button" class="button"><p>BACK</p></div>
+					<div id="npc-stats-back-button" class="button alt-hover"><p>BACK</p></div>
 					<div class="stats-info has-custom-background">
 						<img id="npc-display-img" class="speaker">
 						<div>
